packages/wasm/src/tests/snapshots/wasm__tests__partition__recovery_math_unclosed_paren_chunks.snap
---
source: wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      7
    ],
    "items": 4,
    "width": 63.76,
    "height": 21.12,
    "x": 0.0,
    "y": 0.0
  },
  {
    "range": [
      9,
      16
    ],
    "items": 6,
    "width": 25.97,
    "height": 17.93,
    "x": -12.92,
    "y": 62.72
  },
  {
    "range": [
      18,
      24
    ],
    "items": 2,
    "width": 54.16,
    "height": 21.12,
    "x": 0.0,
    "y": 122.25
  }
]
