packages/wasm/src/tests/snapshots/wasm__tests__partition__recovery_math_unclosed_quote_diagnostics.snap
---
source: wasm/src/tests/partition.rs
expression: render.diagnostics
---
[
  {
    "range": {
      "start": 20,
      "end": 21
    },
    "severity": "warning",
    "message": "unclosed math string; inserted a closing `\"`",
    "hints": []
  }
]
